Persist display names and auth tickets in 'player' table.
Implements #77.